[workspace]
members = [
    "nbt",
    "common",
    "server",
    "level",
    "ecs"
]

[profile.release]
# debug = true
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false
